objects/Guest__c.object
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Guest</label>
    <nameField>
        <label>Guest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>